--- a/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
+++ b/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
@@ -179,9 +179,9 @@ class NativeNotifyCallBack extends WxPayNotify
 `$result = $this->unifiedorder($openid, $product_id);`接收统一下单返回的结果，并将appid、mch_id、nonce_str、prepay_id等信息返回给微信。
 
 回调方法：
-假设商户在公共号平台设置的回调地址为：http://XXXX.com/test/NativeCallBack
+假设商户在公共号平台设置的回调地址为：`http://XXX.com/test/NativeCallBack`
 ```php
-public function NativeCallBack() {
+public function actionNativeCallBack() {
 	$notify = new NativeNotifyCallBack();
 	$notify->Handle(true);
 }
@@ -227,7 +227,9 @@ class PayNotifyCallBack extends WxPayNotify
 }
 
 ```
-`PayNotifyCallBack`同样继承自`WxPayNotify`，需要重写`NotifyProcess`方法。在微信支付结果回调中，`NotifyProcess`需要完成的操作是调用[查询订单](https://pay.weixin.qq.com/wiki/doc/api/native.php?chapter=9_2)接口，主动查询微信端订单状态。假设统一下单接口中定义的回调地址为：`http://XXX.com/test/WxPayCallBack`,
+`PayNotifyCallBack`同样继承自`WxPayNotify`，需要重写`NotifyProcess`方法。在微信支付结果回调中，`NotifyProcess`需要完成的操作是调用[查询订单](https://pay.weixin.qq.com/wiki/doc/api/native.php?chapter=9_2)接口，主动查询微信端订单状态。
+◆ 回调并发控制
+假设统一下单接口中定义的回调地址为：`http://XXX.com/test/WxPayCallBack`,
 ```php
 	/**
      * 微信支付回调函数
@@ -239,7 +241,7 @@ class PayNotifyCallBack extends WxPayNotify
         $notify->Handle(true);        
     }
 ```
-但是多数情况下商户后台在接收到微信支付结果通知后会进行订单状态变更以及一些业务逻辑操作，因此需要对SDK做一定修改。通过阅读SDK我们知道后台最终都是通过`WxpayApi::replyNotify`方法将结果以XML的格式直接输出，方便微信服务器接收，修改`WxpayApi::replyNotify`，将XML作为结果返回：
+多数情况下商户后台在接收到微信支付结果通知后会进行订单状态变更以及执行一些业务逻辑操作，因此需要对SDK做一定修改。通过阅读SDK我们知道后台最终都是通过`WxpayApi::replyNotify`方法将结果以XML的格式直接输出，方便微信服务器接收，修改`WxpayApi::replyNotify`，将XML作为结果返回：
 ```php
 	/**
 	 * 直接输出xml
@@ -278,10 +280,52 @@ class PayNotifyCallBack extends WxPayNotify
         echo $xml;
     }    	
 ```
-`orderHandle`方法用于处理商户后台订单逻辑，由于微信异步通知可能会多次发送给商户系统，因此商户后台业务处理逻辑**必须能够正确处理重复的通知**，如果是更新订单状态，在进行处理之前需要先进行订单状态判断，防止重复更新；如果处理逻辑中涉及到数据表插入等操作，要采用数据锁进行并发控制。例如使用Redis进行并发控制，key设置为用户ID+订单号
+`orderHandle`方法用于处理商户后台订单逻辑，由于微信异步通知可能会多次发送给商户系统，因此商户后台业务处理逻辑**必须能够正确处理重复的通知**，如果是更新订单状态，在进行处理之前需要先判断订单状态，防止重复更新；如果处理逻辑中涉及到数据表插入等操作，要采用数据锁进行并发控制。例如使用Redis进行并发控制，key设置为用户ID+订单号：
+```php
+		//设置redis防止并发写入
+        $redis_key = USERID_ORDERID.':'.$userid.':'.$outtradeno;
+        $set_order = Helper::setRedisCache('setnx', array($redis_key, 1), Mod::app()->params->redisExpire['useridOrderid']);
+        if($set_order && $set_order[0]) {
+            //执行更新订单、插入数据表等操作，在处理过程中如果遇到失败，需要及时删除redis，防止后续回调不能正常执行。
+            $order->paystate = 1;
+            $nret = $order->save();
+            if ($nret) {
+                //进行后续处理
+            } else {
+                //保存失败，删除redis
+                Helper::delRedisCache('del', array($redis_key));
+            }
+        }		
+```
+`$set_order = Helper::setRedisCache('setnx', array($redis_key, 1), Mod::app()->params->redisExpire`使用setnx命令设置key的值为1，且缓存时间设置为24小时。SETNX，是「SET if Not eXists」的缩写，只有缓存不存在的时候才设置，可以利用它来实现锁的效果，但是使用setnx时有一些陷阱，具体可参考[谈谈Redis的SETNX](http://huoding.com/2015/09/14/463)这篇博文。
+`Helper::setRedisCache`是封装的添加/修改Redis缓存的公共方法：
+```php
+public static function setRedisCache($command, array $params, $expired) {
+        $ret = array();
 
+        if ($command && $params && !stristr($command, 'del') && !stristr($command, 'rem')) {
+            if (count($params) == 1) { 
+                $ret = Mod::app()->redis->multi(Redis::PIPELINE)->$command($params[0])->expire($params[0], $expired)->exec();
+            } elseif (count($params) == 2) { 
+                $ret = Mod::app()->redis->multi(Redis::PIPELINE)->$command($params[0], $params[1])->expire($params[0], $expired)->exec();
+            } elseif (count($params) == 3) { 
+                $ret = Mod::app()->redis->multi(Redis::PIPELINE)->$command($params[0], $params[1], $params[2])->expire($params[0], $expired)->exec();
+            }       
+        }       
+
+        return $ret;
+    }
+```
+
+在实际支付过程中可能会出现这样一种情况：
+用户通过扫码已经完成了支付，但是商户后台没有及时收到微信服务器发送的回调通知，导致商户后台订单状态无法及时更新，因此用户端看到的状态还是“未支付”，用户可能还会继续进行扫码尝试支付，这时在调用统一下单接口时，微信服务器返回的数据中result_code为FAIL，且提示该订单已经支付，此时商户后台需要主动去查询微信订单状态并更新后台订单支付状态。
+我在处理这种情况是的逻辑是：
+1）查询商户后台订单状态，如果为未支付，执行步骤2，否则结束；
+2）主动调用微信[查询订单](https://pay.weixin.qq.com/wiki/doc/api/native.php?chapter=9_2)接口，获取订单状态及订单信息，如订单状态为已支付，执行步骤3；
+3）商户后台主动更新订单状态以及进行后续业务逻辑处理。因为在业务逻辑处理中我们使用了数据锁机制，如果在主动更新订单状态的同时收到了微信回调，此时也不会发生重复处理的操作，保证了数据的一致性。
 - 总结：
-模式一需要事先在公共号平台配置支付回调URL，而且整个支付流程中涉及两部分微信回调过程，每个微信回调过程**对于支付结果通知的内容一定要做签名验证，防止数据泄漏导致出现“假通知”，造成资金损失。**
+1）模式一需要事先在公共号平台配置支付回调URL，而且整个支付流程中涉及两部分微信回调过程，每个微信回调过程**对于支付结果通知的内容一定要做签名验证，防止数据泄漏导致出现“假通知”，造成资金损失。**
+2）微信回调处理逻辑要采用数据锁进行并发控制，防止数据重复写入；
 
 ### 模式二：
 - 开发流程：
