--- a/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
+++ b/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
@@ -17,6 +17,8 @@ description: 漫谈微信支付-扫码支付
 - 用户输入支付密码，完成支付；
 - 用户微信客户端收到支付成功通知，微信后台将支付结果回调给商户后台。
 
+---
+
 ## 支付模式
 根据应用场景的不同，微信提供了两种扫码支付模式：
 **模式一：**
@@ -24,6 +26,9 @@ description: 漫谈微信支付-扫码支付
 用户扫码后，微信支付系统会将用户openid和商户定义的productid返回给商户在微信公共平台配置的回调地址，商户根据productid生成微信支付交易，最后微信支付系统发起用户支付流程。
 **模式二：**
 商户后台主动发起调用微信支付[统一下单](https://pay.weixin.qq.com/wiki/doc/api/native.php?chapter=9_1)接口生成预付交易，并将接口返回的短连接生成二维码，用户扫码后输入密码完成支付交易。
+
+---
+
 ## 实现过程
 ### 模式一：
 - 准备工作：
@@ -292,7 +297,7 @@ class PayNotifyCallBack extends WxPayNotify
             if ($nret) {
                 //进行后续处理
             } else {
-                //保存失败，删除redis
+                //保存失败，要及时删除redis防止后续回调操作被阻塞
                 Helper::delRedisCache('del', array($redis_key));
             }
         }		
@@ -318,17 +323,80 @@ public static function setRedisCache($command, array $params, $expired) {
 ```
 
 在实际支付过程中可能会出现这样一种情况：
-用户通过扫码已经完成了支付，但是商户后台没有及时收到微信服务器发送的回调通知，导致商户后台订单状态无法及时更新，因此用户端看到的状态还是“未支付”，用户可能还会继续进行扫码尝试支付，这时在调用统一下单接口时，微信服务器返回的数据中result_code为FAIL，且提示该订单已经支付，此时商户后台需要主动去查询微信订单状态并更新后台订单支付状态。
+用户通过扫码已经完成了支付，但是商户后台没有及时收到微信服务器发送的回调通知，导致商户后台订单状态无法及时更新，因此用户端看到的状态还是“未支付”，用户可能还会继续进行扫码尝试支付，这时在调用统一下单接口时，微信服务器返回的数据中result_code为FAIL，且提示该订单已经支付，此时商户后台需要主动去查询微信端订单状态并更新商户后台订单支付状态。
 我在处理这种情况是的逻辑是：
 1）查询商户后台订单状态，如果为未支付，执行步骤2，否则结束；
 2）主动调用微信[查询订单](https://pay.weixin.qq.com/wiki/doc/api/native.php?chapter=9_2)接口，获取订单状态及订单信息，如订单状态为已支付，执行步骤3；
-3）商户后台主动更新订单状态以及进行后续业务逻辑处理。因为在业务逻辑处理中我们使用了数据锁机制，如果在主动更新订单状态的同时收到了微信回调，此时也不会发生重复处理的操作，保证了数据的一致性。
+3）商户后台主动更新订单状态以及相应业务逻辑处理。因为在业务逻辑处理中我们使用了数据锁机制，如果在主动更新订单状态的同时收到了微信回调请求，此时也不会发生重复处理的操作，保证了数据的一致性。
 - 总结：
 1）模式一需要事先在公共号平台配置支付回调URL，而且整个支付流程中涉及两部分微信回调过程，每个微信回调过程**对于支付结果通知的内容一定要做签名验证，防止数据泄漏导致出现“假通知”，造成资金损失。**
 2）微信回调处理逻辑要采用数据锁进行并发控制，防止数据重复写入；
 
 ### 模式二：
+模式二要比模式一简单，不需要在公共号平台设置回调URL，直接调用统一下单接口得到code_url用于生成二维码，用户扫描二维码完成支付，同时微信将支付结果异步通知商户后台。
 - 开发流程：
-- 总结：
+◆ 商户后台根据商品生成商户订单；
+◆ 商户后台调用微信支付统一下单接口生成预支付交易，并返回二维码链接code_url；
+◆ 商户后台根据code_url生成二维码；
+◆ 用户扫描二维码后微信端发起用户端微信支付流程（拉起微信支付，输入密码，完成扣款）；
+◆ 微信支付系统完成交易后向用户微信客户端发送支付结果通知；
+◆ 微信支付系统通过发送异步消息，将支付结果发送至商户统一下单时填写的回调地址；
+◆ 商户确认微信支付结果并更新订单状态，如商户后台未收到微信支付结果通知，可以通过调用查询订单接口主动查询订单支付结果。
+
+◆ 所需文件
+lib/* ：PHP-SDK lib文件夹；
+WxPay.NativePay.php：扫码支付实现类；
+```php
+require_once "wxPay/WxPay.Api.php";
+require_once "WxPay.NativePay.php";
+$notify = new NativePay();
+
+$input = new WxPayUnifiedOrder();
+$input->SetBody($title);
+$input->SetAttach($attach);
+$input->SetOut_trade_no($orderid);
+$input->SetTotal_fee($total_fee);
+$input->SetTime_start(date("YmdHis"));
+$input->SetTime_expire(date("YmdHis", time() + 600));
+$input->SetNotify_url("http://XXX.com/test/WxPayCallBack");
+$input->SetTrade_type("NATIVE");
+$input->SetProduct_id($orderid);
+$url =  $notify->GetPayUrl($input);	
+```
+`GetPayUrl`方法完成了统一下单操作，并返回微信端接口调用结果。
+注意：生成的code_url有效期为2小时。
+```php
+/**
+	 * 
+	 * 生成直接支付url，支付url有效期为2小时,模式二
+	 * @param UnifiedOrderInput $input
+	 */
+	public function GetPayUrl($input)
+	{
+		if($input->GetTrade_type() == "NATIVE")
+		{
+			$result = WxPayApi::unifiedOrder($input);
+			return $result;
+		}
+	}
+```
+模式二支付结果回调流程与模式一相同。
+
+---
+
 
 ## 支付模式区别
+◆ 应用场景：
+模式一生成的是固定二维码，方便打印，更适用于用户线下扫码支付；
+模式二是商户后台先下单再生成支付二维码，具有时效性，更适用于线上扫码支付；
+◆ 开发流程
+模式一比模式二在支付过程中多一次回调流程，而且模式二流程更为简单；
+
+---
+
+## 总结
+扫码支付在四种支付方式中算是比较简单的一种，而且微信官方SDK已经对支付流程中需要的各种接口作了很好的封装，开发起来相对比较简单。
+任何一种支付方式都少不了处理异步回调支付结果过程，在该过程中商户后台一定要做好签名验证，正确处理重复通知，保持数据的一致性，防止数据重入造成的数据混乱。
+
+至此有关扫码支付的实现已介绍完毕，在下一节[漫谈微信支付-APP支付]()将会介绍APP支付的实现过程。
+—- 完结 —-
