--- a/source/_posts/2016-06-28-漫谈微信支付.md
+++ b/source/_posts/2016-06-28-漫谈微信支付.md
@@ -472,5 +472,5 @@ WxpayApi类的notify方法为：
 `ReplyNotify`直接输出回调处理完成后的XML数据。因为是回调系统，直接输出XML后，微信后台可以获取到该输出内容，所以不需要开发者主动将结果发送给微信后台。
 此处官方SDK又出现一处错误：`GetReturn_code`方法不需要传递参数，应该把$return_code删除。
 
-至此微信支付相关的准备工作已介绍完毕，在下一节[漫谈微信支付-扫码支付]()将会介绍扫码支付的实现过程。
+至此微信支付相关的准备工作已介绍完毕，在下一节[漫谈微信支付-扫码支付](http://yurixu.com/blog/2016/07/15/%E6%BC%AB%E8%B0%88%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98-%E6%89%AB%E7%A0%81%E6%94%AF%E4%BB%98/)将会介绍扫码支付的实现过程。
 ---- 完结 ----
