--- a/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
+++ b/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
@@ -329,8 +329,8 @@ public static function setRedisCache($command, array $params, $expired) {
 2）主动调用微信[查询订单](https://pay.weixin.qq.com/wiki/doc/api/native.php?chapter=9_2)接口，获取订单状态及订单信息，如订单状态为已支付，执行步骤3；
 3）商户后台主动更新订单状态以及相应业务逻辑处理。因为在业务逻辑处理中我们使用了数据锁机制，如果在主动更新订单状态的同时收到了微信回调请求，此时也不会发生重复处理的操作，保证了数据的一致性。
 - 总结：
-1）模式一需要事先在公共号平台配置支付回调URL，而且整个支付流程中涉及两部分微信回调过程，每个微信回调过程**对于支付结果通知的内容一定要做签名验证，防止数据泄漏导致出现“假通知”，造成资金损失。**
-2）微信回调处理逻辑要采用数据锁进行并发控制，防止数据重复写入；
+◆ 模式一需要事先在公共号平台配置支付回调URL，而且整个支付流程中涉及两部分微信回调过程，每个微信回调过程**对于支付结果通知的内容一定要做签名验证，防止数据泄漏导致出现“假通知”，造成资金损失。**
+◆ 微信回调处理逻辑要采用数据锁进行并发控制，防止数据重复写入；
 
 ### 模式二：
 模式二要比模式一简单，不需要在公共号平台设置回调URL，直接调用统一下单接口得到code_url用于生成二维码，用户扫描二维码完成支付，同时微信将支付结果异步通知商户后台。
