--- a/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
+++ b/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
@@ -15,7 +15,7 @@ description: 漫谈微信支付-扫码支付
 - 商户根据微信支付规则为不同商品生成二维码；
 - 用户使用微信扫一扫功能，扫码获取商品支付信息；
 - 用户输入支付密码，完成支付；
-- 用户微信客户端收到支付成功通知，微信后台将支付结果回调给商户后台。
+- 用户微信客户端收到支付成功通知，微信后台将支付结果异步回调给商户后台。
 
 ---
 
@@ -138,6 +138,7 @@ class NativeNotifyCallBack extends WxPayNotify
 		$input->SetGoods_tag("test");		
 		//设置微信支付结果通知回调地址
 		$input->SetNotify_url("http://XXX.com/test/WxPayCallBack");
+		//扫码支付的trade_type要设置为NATIVE
 		$input->SetTrade_type("NATIVE");
 		$input->SetOpenid($openId);
 		$input->SetProduct_id($product_id);
@@ -398,5 +399,4 @@ $url =  $notify->GetPayUrl($input);
 扫码支付在四种支付方式中算是比较简单的一种，而且微信官方SDK已经对支付流程中需要的各种接口作了很好的封装，开发起来相对比较简单。
 任何一种支付方式都少不了处理异步回调支付结果过程，在该过程中商户后台一定要做好签名验证，正确处理重复通知，保持数据的一致性，防止数据重入造成的数据混乱。
 
-至此有关扫码支付的实现已介绍完毕，在下一节[漫谈微信支付-APP支付]()将会介绍APP支付的实现过程。
-—- 完结 —-
+有关扫码支付的实现已介绍完毕，在下一节[漫谈微信支付-APP支付]()将会介绍APP支付的实现过程。
