--- a/source/_posts/2016-08-16-漫谈微信支付-公共号支付.md
+++ b/source/_posts/2016-08-16-漫谈微信支付-公共号支付.md
@@ -145,3 +145,26 @@ APP拉起微信支付接口参数列表：
 测试开发时配置好测试授权目录，将微信号添加到测试白名单，H5调用拉起微信支付接口即可完成支付。
 
 ## 常见问题
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
+
+◆ **统一下单**
