--- a/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
+++ b/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
@@ -399,4 +399,5 @@ $url =  $notify->GetPayUrl($input);
 扫码支付在四种支付方式中算是比较简单的一种，而且微信官方SDK已经对支付流程中需要的各种接口作了很好的封装，开发起来相对比较简单。
 任何一种支付方式都少不了处理异步回调支付结果过程，在该过程中商户后台一定要做好签名验证，正确处理重复通知，保持数据的一致性，防止数据重入造成的数据混乱。
 
-有关扫码支付的实现已介绍完毕，在下一节[漫谈微信支付-APP支付]()将会介绍APP支付的实现过程。
+有关扫码支付的实现已介绍完毕，在下一节[漫谈微信支付-APP支付](http://yurixu.com/blog/2016/07/22/%E6%BC%AB%E8%B0%88%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98-APP%E6%94%AF%E4%BB%98/)将会介绍APP支付的实现过程。
+转载请注明出处：[http://yurixu.com/blog/2016/07/15/漫谈微信支付-扫码支付/](http://yurixu.com/blog/2016/07/15/%E6%BC%AB%E8%B0%88%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98-%E6%89%AB%E7%A0%81%E6%94%AF%E4%BB%98/)
