--- a/source/_posts/2016-08-09-2016年上半年小结.md
+++ b/source/_posts/2016-08-09-2016年上半年小结.md
@@ -7,7 +7,7 @@ description:
 ---
 
 恍恍惚惚已经到了8月，生活总是被忙碌的感觉充斥，多少有些乏味。
-回顾上半年，经历了工作满一年、定亲、搬家、女票毕业，身体上也经历一次心疼，是真的“心”疼~
+回顾上半年，经历了工作满一年、搬家、女票毕业，身体上也经历一次心疼，是真的“心”疼~
 2-5月，工作和个人生活计划进行的有条不紊，生活异常的充实，每天除了工作时间就是学习充电，领悟到了阅读带来的内心平静与安稳。
 6月经历了搬家以及身体的不适之后，生活作息再一次被打乱了，尤其是经历了“心”疼，每天都感觉异常的疲惫，也不敢熬夜了，因为到了晚上11点左右左胸明显感觉不适。
 而后就是精品课支付与智慧校园项目同时进行，生活更是被工作占据。一句话，下半年继续加油~
