--- a/source/_posts/2016-07-20-漫谈微信支付-APP支付.md
+++ b/source/_posts/2016-07-20-漫谈微信支付-APP支付.md
@@ -77,4 +77,5 @@ $sign = Common::makeSign($result);      //重新生成签名
 最后的`$sign = Common::makeSign($result); `是我将`lib/WxPay.Data.php`中的MakeSign作为公共方法提出，放到类Common中进行使用。
 调起微信进行支付，支付完成后，微信系统会将支付结果异步回调统一下单接口中设置的notify_url。关于微信支付异步回调的处理过程参见上一篇[漫谈微信支付-扫码支付](http://yurixu.com/blog/2016/07/15/%E6%BC%AB%E8%B0%88%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98-%E6%89%AB%E7%A0%81%E6%94%AF%E4%BB%98/)中的**支付结果回调**和** 回调并发控制**部分。
 
-有关APP支付的实现已介绍完毕，在下一节[漫谈微信支付-公共号支付]()将会介绍公共号支付的实现过程。
+有关APP支付的实现已介绍完毕，在下一节[漫谈微信支付-公共号支付](http://yurixu.com/blog/2016/06/28/漫谈微信支付-公共号支付/)将会介绍公共号支付的实现过程。
+转载请注明出处：[http://yurixu.com/blog/2016/07/22/漫谈微信支付-APP支付/](http://yurixu.com/blog/2016/07/22/%E6%BC%AB%E8%B0%88%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98-APP%E6%94%AF%E4%BB%98/)
