--- a/source/_posts/2016-08-16-漫谈微信支付-公共号支付.md
+++ b/source/_posts/2016-08-16-漫谈微信支付-公共号支付.md
@@ -146,7 +146,7 @@ APP拉起微信支付接口参数列表：
 
 ## 常见问题
 ◆ **支付场景非法**
-<img src="/img/微信支付系列/常见问题/支付场景非法.png" align=left></img>
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/%E6%94%AF%E4%BB%98%E5%9C%BA%E6%99%AF%E9%9D%9E%E6%B3%95.png" align=left></img>
 <br><br><br><br>
 **错误场景**：前端调用拉起微信支付接口`getBrandWCPayRequest`报错。
 **原因分析**：与开发用的APPID有关。JSAPI支付用到的APPID是从微信公告平台申请，APP支付用到的APPID是从微信开放平台申请，如果将APP支付的APPID用于JSAPI支付，就会收到该错误提示。
@@ -158,67 +158,67 @@ APP拉起微信支付接口参数列表：
 **解决方法**：同“支付场景非法”
 
 ◆ **不允许跨号支付**
-<img src="/img/微信支付系列/常见问题/不允许跨号支付.png" align=left></img>
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/%E4%B8%8D%E5%85%81%E8%AE%B8%E8%B7%A8%E5%8F%B7%E6%94%AF%E4%BB%98.png" align=left></img>
 <br><br><br><br><br><br>
 **错误场景**：在公共号内调用`unifiedorder`统一下单接口报错。
 **原因分析**：公共号A申请开通了JSAPI支付，得到该公共号微信支付开发对应的APPID、KEY、APPSECRET，如果在公共号B内调用公共号A开发的微信支付接口，就会提示“不允许跨号支付”，微信侧限制了微信支付开发的相关接口只能在对应的公共号内调用。
 **解决方法**：在微信JSAPI开发中配置的公共号内调用微信支付相关接口。
 
 ◆ **缺少openid**
-<img src="/img/微信支付系列/常见问题/缺少openid.png" align=left></img>
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/%E7%BC%BA%E5%B0%91openid.png" align=left></img>
 <br><br><br><br><br>
 **错误场景**：后台调用`unifiedorder`统一下单接口报错。
 **原因分析**：公共号支付的下单接口需要传递openid参数，为用户在商户appid下的唯一标识。调用统一下单接口时需要先获取用户openid。
 **解决方法**：调用`unifiedorder`统一下单接口前，确保已经获取到用户openid。
 
 ◆ **缺少timeStamp**
-<img src="/img/微信支付系列/常见问题/缺少timeStamp.png" align=left></img>
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/%E7%BC%BA%E5%B0%91timeStamp.png" align=left></img>
 <br><br><br><br><br><br>
 **错误场景**：前端调用拉起微信支付接口`getBrandWCPayRequest`报错。
 **原因分析**：`getBrandWCPayRequest`参数列表中写明了timeStamp参数类型为String，如果传递的timeStamp值为整型，会产生该错误。
 **解决方法**：将timeStamp的值显示转换为字符串类型。
 
 ◆ **签名失败**
-<img src="/img/微信支付系列/常见问题/签名失败.png" align=left></img>
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/%E7%AD%BE%E5%90%8D%E5%A4%B1%E8%B4%A5.png" align=left></img>
 <br><br><br><br>
 **错误场景**：前端调用拉起微信支付接口`getBrandWCPayRequest`报错。
 **原因分析**：公共号支付拉起微信支付接口与APP支付拉起微信支付接口中参数的大小写不同，生成签名会区分大小写。
 **解决方法**：生成签名要严格按照参数列表中变量名称进行生成，尤其注意参数大小写。
 
 ◆ **body参数长度有误**
-<img src="/img/微信支付系列/常见问题/body参数长度有误.png" align=left></img>
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/body%E5%8F%82%E6%95%B0%E9%95%BF%E5%BA%A6%E6%9C%89%E8%AF%AF.png" align=left></img>
 <br><br><br><br>
 **错误场景**：后台调用`unifiedorder`统一下单接口报错。
 **原因分析**：body参数长度太长，unifiedorder统一下单接口中body参数长度为String(128)，即占用128个字节，一个汉字占用3个字节，一个字母或数字占用1个字节，所以如果全部为汉字的话，最多42个。
 **解决方法**：必要时使用字符串截取函数限制body的长度。
 
 ◆ **URL未注册**
-<img src="/img/微信支付系列/常见问题/URL未注册.png" align=left></img>
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/URL%E6%9C%AA%E6%B3%A8%E5%86%8C.png" align=left></img>
 <br><br><br><br><br><br>
 **错误场景**：前端调用拉起微信支付接口`getBrandWCPayRequest`报错。
 **原因分析**：授权目录配置问题，当前支付页与授权目录设置不匹配。
-**解决方法**：详细解决方案可参考另一篇博文[<漫谈微信支付-授权目录设置>](http://yurixu.com/blog/2016/08/22/%E6%BC%AB%E8%B0%88%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98-%E6%8E%88%E6%9D%83%E7%9B%AE%E5%BD%95%E8%AE%BE%E7%BD%AE/)
+**解决方法**：详细解决方案可参考另一篇博文[<漫谈微信支付-授权目录设置>](http://yurixu.com/blog/2016/08/21/%E6%BC%AB%E8%B0%88%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98-%E6%8E%88%E6%9D%83%E7%9B%AE%E5%BD%95%E8%AE%BE%E7%BD%AE/)
 
 ◆ **下单账号与支付账号不一致**
-<img src="/img/微信支付系列/常见问题/下单账号与支付账号不一致.png" align=left></img>
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/%E4%B8%8B%E5%8D%95%E8%B4%A6%E5%8F%B7%E4%B8%8E%E6%94%AF%E4%BB%98%E8%B4%A6%E5%8F%B7%E4%B8%8D%E4%B8%80%E8%87%B4.png" align=left></img>
 <br><br><br><br>
 **错误场景**：前端调用拉起微信支付接口`getBrandWCPayRequest`报错。前端调用拉起微信支付接口`getBrandWCPayRequest`，拉起微信账号A，但是在微信A中没有完成支付（例如：执行了取消操作），此时如果换另一个微信账号B，再对微信端同一个订单进行支付，拉起微信，此时会报该错。
 **原因分析**：微信端同一个订单号，限制了下单与支付账号必须使用同一个微信。在调用下单接口时传递了openid，在调用拉起微信支付接口时，如果当前用户的微信与下单微信不同，就会报该错。
 **解决方法**：下单账号与支付账号必须使用同一个微信。
 
 ◆ **商户订单号重复**
-<img src="/img/微信支付系列/常见问题/商户订单号重复.png" align=left></img>
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/%E5%95%86%E6%88%B7%E8%AE%A2%E5%8D%95%E5%8F%B7%E9%87%8D%E5%A4%8D.png" align=left></img>
 <br><br><br><br>
 **错误场景**：后台调用`unifiedorder`统一下单接口报错。
 **原因分析**：同一个订单，如果修改了商品描述或者商品价格，再用同一个订单号去调用统一下单接口就会报该错。
 **解决方法**：重新生成订单。
 
-◆ **已下单**
-<img src="/img/微信支付系列/常见问题/已下单.png" align=left></img>
+◆ **订单已过期**
+<img src="http://7xrc03.com1.z0.glb.clouddn.com/wxPay/error/%E8%AE%A2%E5%8D%95%E5%B7%B2%E8%BF%87%E6%9C%9F.png" align=left></img>
 <br><br><br><br>
 **错误场景**：后台调用`unifiedorder`统一下单接口报错。
-**原因分析**：说明该订单已经支付成功了。
-**解决方法**：直接提示订单已支付即可。
+**原因分析**：下单有时效性。
+**解决方法**：重新下单。
 
 ◆ **调用微信支付相关接口异常缓慢**
 微信支付SDK中所有最终请求微信服务器的出口均是经过WxPay.Api.php中的`postXmlCurl`接口：
