--- a/source/_posts/2016-08-22-微信支付系列文章导航.md
+++ b/source/_posts/2016-08-22-微信支付系列文章导航.md
@@ -11,7 +11,7 @@ description:
 [漫谈微信支付-扫码支付](http://yurixu.com/blog/2016/07/15/%E6%BC%AB%E8%B0%88%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98-%E6%89%AB%E7%A0%81%E6%94%AF%E4%BB%98/)
 [漫谈微信支付-APP支付](http://yurixu.com/blog/2016/07/22/%E6%BC%AB%E8%B0%88%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98-APP%E6%94%AF%E4%BB%98/)
 [漫谈微信支付-公共号支付](http://yurixu.com/blog/2016/08/16/漫谈微信支付-公共号支付/)
-[漫谈微信支付-授权目录设置/](http://yurixu.com/blog/2016/08/21/漫谈微信支付-授权目录设置/)
+[漫谈微信支付-授权目录设置](http://yurixu.com/blog/2016/08/21/漫谈微信支付-授权目录设置/)
 
 转载请注明出处：[http://yurixu.com/blog/2016/08/21/微信支付系列文章导航/](http://yurixu.com/blog/2016/08/21/微信支付系列文章导航/)
 
