--- a/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
+++ b/source/_posts/2016-07-15-漫谈微信支付-扫码支付.md
@@ -239,7 +239,7 @@ class PayNotifyCallBack extends WxPayNotify
 ```php
 	/**
      * 微信支付回调函数
-     * @author yurixu 2015/6/26
+     * @author yuri 2015/6/26
      */
     public function actionWxPayCallBack(){
         require_once "WxPay.PayNotifyCallBack.php";
@@ -256,7 +256,7 @@ class PayNotifyCallBack extends WxPayNotify
 	public static function replyNotify($xml)
 	{
 		//echo $xml;
-		//modify by yurixu 2015/6/26
+		//modify by yuri 2015/6/26
 		return $xml;
 	}
 ```
@@ -264,7 +264,7 @@ class PayNotifyCallBack extends WxPayNotify
 ```php
 	/**
      * 微信支付回调函数
-     * @author yurixu 2015/6/26
+     * @author yuri 2015/6/26
      */
 	public function actionWxPayCallBack(){
         require_once "WxPay.PayNotifyCallBack.php";
