--- a/source/_posts/2016-08-16-漫谈微信支付-公共号支付.md
+++ b/source/_posts/2016-08-16-漫谈微信支付-公共号支付.md
@@ -138,7 +138,7 @@ APP拉起微信支付接口参数列表：
 	**/
 	public function SetTimeStamp($value)
 	{
-		//modify by yurixu 2016/7/5 解决JSAPI微信支付提示“缺少timeStamp参数”问题
+		//modify by yuri 2016/7/5 解决JSAPI微信支付提示“缺少timeStamp参数”问题
 		$this->values['timeStamp'] = (string)$value;
 	}
 ```
@@ -250,7 +250,7 @@ APP拉起微信支付接口参数列表：
 		curl_setopt($ch, CURLOPT_HEADER, FALSE);
 		//要求结果为字符串且输出到屏幕上
 		curl_setopt($ch, CURLOPT_RETURNTRANSFER, TRUE);
-		//modify by yurixu 2016/7/5 设置curl默认访问IPv4网络
+		//modify by yuri 2016/7/5 设置curl默认访问IPv4网络
 		curl_setopt($ch, CURLOPT_IPRESOLVE, CURL_IPRESOLVE_V4);
 		if($useCert == true){
 			//设置证书
