--- a/source/_posts/2016-08-24-几种模拟POST请求的方式汇总.md
+++ b/source/_posts/2016-08-24-几种模拟POST请求的方式汇总.md
@@ -5,3 +5,80 @@ categories: PHP 网络技术
 tags: PHP POST
 description: 几种模拟POST请求的方式汇总
 ---
+
+//方式一：file_get_contents
+/*
+ $url = 'https://bbs.byr.cn/user/ajax_login.json';
+ 
+ $data = array('id' => 'xyw043735', 'passwd' => 'xyw08371');
+ $data = http_build_query($data); 
+ $opts = array(
+	'http' => array(
+		'method' => 'POST',
+		'header' => "content-type: application/x-www-form-urlencoded; charset=UTF-8\r\n".
+		"user-agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.103 Safari/537.36\r\n".
+		"x-requested-with: XMLHttpRequest\r\n",
+		'content' => $data
+	),
+ );
+ $context = stream_context_create($opts);
+ $html = @file_get_contents($url, false, $context);
+ print_r($html);
+ echo "----start second ----\n"; 
+ die;
+ **/
+ 
+ //方式二：socket
+ /*
+$file = 'out.txt'; 
+$host = 'bbs.byr.cn';
+$port = 443;
+$proxy = 'ssl://';
+//对于HTTP协议，port对应80，proxy为http://，对于HTTPS协议，port对应443，协议为ssl://
+//$fp = fsockopen($proxy.$host, $port, $errno, $errstr, 5);
+$fp = stream_socket_client("ssl://bbs.byr.cn:443", $errno, $errstr, 5);
+//对于HTTP协议，stream_socket_client第一个参数使用tcp://
+if($fp) {
+	$out = "POST https://bbs.byr.cn/user/ajax_login.json HTTP/1.1\r\n";
+	$out .= "Host: bbs.byr.cn\r\n".
+			"content-type: application/x-www-form-urlencoded; charset=UTF-8\r\n".
+			"user-agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.103 Safari/537.36\r\n".
+			"x-requested-with: XMLHttpRequest\r\n".
+			"Content-Length: 28\r\n".
+			"Connection: close\r\n\r\n";
+	$out .= $data."\r\n\r\n";
+	//print_r($out);die;
+	fwrite($fp, $out);
+	
+	while(!feof($fp)) {
+		echo fgets($fp, 1280);
+	}
+	//file_put_contents($file, $fp);		//写入文件
+	fclose($fp);
+}
+die;
+* */
+
+//方式三：curl
+ $url = 'https://bbs.byr.cn/user/ajax_login.json';
+ 
+ $data = array('id' => 'xyw043735', 'passwd' => 'xyw08371');
+ $data = http_build_query($data); 
+ 
+$ch = curl_init();
+curl_setopt($ch, CURLOPT_TIMEOUT, 30);
+curl_setopt($ch, CURLOPT_URL, 'https://bbs.byr.cn/user/ajax_login.json');
+curl_setopt($ch, CURLOPT_SSL_VERIFYPEER,FALSE);
+curl_setopt($ch, CURLOPT_SSL_VERIFYHOST,FALSE);
+curl_setopt($ch, CURLOPT_HEADER, FALSE);
+curl_setopt($ch, CURLOPT_RETURNTRANSFER, TRUE);
+curl_setopt($ch, CURLOPT_POST, TRUE);
+curl_setopt($ch, CURLOPT_POSTFIELDS, $data);
+$output = curl_exec($ch);
+var_dump(curl_errno($ch));  //查看报错信息  
+ if (curl_errno($ch)) {
+       echo 'Errno'.curl_error($ch);//捕抓异常
+    }
+curl_close($ch);
+echo 'res=';print_r($output);
+die;
