--- a/source/_posts/2016-09-06-Postman-接口调试工具使用简介.md
+++ b/source/_posts/2016-09-06-Postman-接口调试工具使用简介.md
@@ -6,6 +6,38 @@ tags: [Sublime, PHP]
 description:
 ---
 
-![](/img/article/postman.jpg)
+![](http://7xrc03.com1.z0.glb.clouddn.com/201609/Postman/postman.jpg)
 本文介绍一款功能强大的网页接口调试与请求构造的Chrome浏览器插件。
 <!--more-->
+
+## 简介
+平时在接口开发过程中往往需要构造请求并跟踪接口响应结果，Postman可以完全满足这个要求。Postman是一款Chrome插件,可以用来构造网页请求，还可以将构造的请求地址保存至Collections，同时借助插件Postman Interceptor还可以实现捕获网页请求至Postman，实现携带cookie请求接口。
+
+## 安装
+Postman下载地址：[Postman](https://chrome.google.com/webstore/detail/postman/fhbjgbiflinjbdggehcddcbncdddomop?utm_source=chrome-ntp-icon)
+Postman Interceptor下载地址：[Postman Interceptor](https://chrome.google.com/webstore/detail/postman-interceptor/aicmkgpgakddgnaphhhpliifpcfhicfo?utm_source=chrome-ntp-icon)
+## 使用
+Postman的主要界面如下图所示：
+![Postman界面](http://7xrc03.com1.z0.glb.clouddn.com/201609/Postman/Postman%E7%95%8C%E9%9D%A2.png)
+①：请求的历史记录。同时插件Postman Interceptor也会将浏览器中捕获的接口地址置于该页卡下；
+②：Collections类似于文件夹，内部还可以继续创建文件夹，可以将接口地址根据需要放置到不同的文件夹下方便管理；
+③：Collections下分三个子页卡，ALL对应全部接口文件夹；ME对应本人私有的接口文件夹；Team对应团队接口文件夹，在进行团队接口开发时可以方便管理；
+④：Collections的新建以及排序；
+⑤：Interceptor：拦截器，配合插件Postman Interceptor使用。在插件Postman Interceptor和Postman中同时打开请求拦截，即可以实现将浏览器中的接口拦截到Postman中；
+⑥：可以设置并查看全局变量；
+⑦：设置不同的请求方式；
+⑧：设置请求链接；
+⑨：可以将接口保存到Collections；
+10-14可以设置发送请求的相关参数；
+⑩：设置鉴权参数，例如：OAuth 1.0，OAuth 2.0等；
+⑪：设置请求头；
+⑫：设置请求体；
+⑬：在发起请求前执行的脚本；
+⑭：设置测试用例；
+⑮：将请求根据不同的语言生成不同的代码
+![](/img/article/Postman-Language.png)
+⑯：Presets，在设置请求头Headers时使用，可以预先设定请求头，在构造请求的时候方便直接使用。例如在构造Ajax的POST请求时，需要经常添加X-Requested-With:XMLHttpRequest头，可以预先设置保存到Presets；
+⑰：17是一系列请求响应的内容，包括响应体、cookie、响应头以及测试用例执行结果；
+⑱：
+⑲：
+⑳：
