--- a/source/_posts/2016-09-06-Postman-接口调试工具使用简介.md
+++ b/source/_posts/2016-09-06-Postman-接口调试工具使用简介.md
@@ -11,7 +11,7 @@ description:
 <!--more-->
 
 ## 简介
-平时在接口开发过程中往往需要构造请求并跟踪接口响应结果，Postman可以完全满足这个要求。Postman是一款Chrome插件,可以用来构造网页请求，还可以将构造的请求地址保存至Collections，同时借助插件Postman Interceptor还可以实现捕获网页请求至Postman，实现携带cookie请求接口。
+在接口开发过程中往往需要构造请求并跟踪接口响应结果，Postman可以完全满足这个要求。Postman是一款Chrome插件,可以用来构造网页请求，还可以将构造的请求地址保存至Collections，同时借助插件Postman Interceptor还可以实现捕获网页请求至Postman，实现携带cookie请求接口。
 
 ## 安装
 Postman下载地址：[Postman](https://chrome.google.com/webstore/detail/postman/fhbjgbiflinjbdggehcddcbncdddomop?utm_source=chrome-ntp-icon)
@@ -34,10 +34,20 @@ Postman的主要界面如下图所示：
 ⑫：设置请求体；
 ⑬：在发起请求前执行的脚本；
 ⑭：设置测试用例；
-⑮：将请求根据不同的语言生成不同的代码
+⑮：将请求生成不同语言对应的代码
 ![](/img/article/Postman-Language.png)
 ⑯：Presets，在设置请求头Headers时使用，可以预先设定请求头，在构造请求的时候方便直接使用。例如在构造Ajax的POST请求时，需要经常添加X-Requested-With:XMLHttpRequest头，可以预先设置保存到Presets；
 ⑰：17是一系列请求响应的内容，包括响应体、cookie、响应头以及测试用例执行结果；
-⑱：
-⑲：
-⑳：
+⑱：返回结果的展现方式，Pretty是格式化后的Json数据；Raw是原始数据；Preview以HTML的方式预览；
+
+## Interceptor
+
+## 测试
+①：Pre-request Script
+②：Tests
+③：Runner
+
+参考文献：
+[1] [API自动化测试利器——Postman](https://www.sdk.cn/news/1037)
+
+--- 完结 ---
