--- a/source/_posts/2016-09-06-Postman-接口调试工具使用简介.md
+++ b/source/_posts/2016-09-06-Postman-接口调试工具使用简介.md
@@ -35,17 +35,21 @@ Postman的主要界面如下图所示：
 ⑬：在发起请求前执行的脚本；
 ⑭：设置测试用例；
 ⑮：将请求生成不同语言对应的代码
-![](/img/article/Postman-Language.png)
+![](http://7xrc03.com1.z0.glb.clouddn.com/201609/Postman/Postman-Language.png)
 ⑯：Presets，在设置请求头Headers时使用，可以预先设定请求头，在构造请求的时候方便直接使用。例如在构造Ajax的POST请求时，需要经常添加X-Requested-With:XMLHttpRequest头，可以预先设置保存到Presets；
 ⑰：17是一系列请求响应的内容，包括响应体、cookie、响应头以及测试用例执行结果；
 ⑱：返回结果的展现方式，Pretty是格式化后的Json数据；Raw是原始数据；Preview以HTML的方式预览；
 
-## Interceptor
+## 拦截器
+Postman Interceptor对Postman现有功能进行了增强，可以实现捕获浏览器请求，并且实现对请求的过滤。使用方法非常简单，在Postman中开启Interceptor（界面⑤所示），在Postman Interceptor的Request Capture中选择ON，即可将捕获的请求接口展现到Postman的History页卡中，同时Postman Interceptor的Filter requests可以对接口进行过滤，例如配置`http://yurixu.com/.*`，这样只会捕获[yurixu.com](yurixu.com)下的接口。
 
 ## 测试
-①：Pre-request Script
-②：Tests
+①：[Pre-request Script](https://www.getpostman.com/docs/pre_request_scripts)
+用于在发送请求前执行相关的JavaScript代码，例如可以在发送请求头中设置时间戳或者发送一个随机的字符串。
+②：[Tests](https://www.getpostman.com/docs/writing_tests)
+Testes可以设置各种测试用例，例如检查响应状态码、响应串、验证JSON、检查Header等。
 ③：Runner
+Collection Runner相当于一个执行接口集，在设置好测试用例后，就可以使用Collection Runner对接口进行同时请求。
 
 参考文献：
 [1] [API自动化测试利器——Postman](https://www.sdk.cn/news/1037)
