--- a/source/_posts/2016-11-10-统计数据表各列非空值的数量.md
+++ b/source/_posts/2016-11-10-统计数据表各列非空值的数量.md
@@ -7,6 +7,8 @@ description:
 ---
 
 ![](http://7xrc03.com1.z0.glb.clouddn.com/201611/Mysql/mysql.jpg)
+本文介绍如何统计数据表中每一列非空值的数量。
+<!--more-->
 
 ## 背景
 Mysql数据中存在一张数据表A，A含有的数据列较多，例如包含100列，如何使用SQL统计出每一列中非空值的数量。
